Fixed svg intro overflow in chrome

--- a/css/viz.css
+++ b/css/viz.css
@@ -36,7 +36,7 @@ body {
 }
 /* SVG styles */
 svg:not(:root) {
-    overflow: visible;
+    /* overflow: visible; */
     height: auto;
     width: 100%
 }
